--- a/nginx.conf
+++ b/nginx.conf
@@ -53,16 +53,16 @@ http {
 	# Uncomment it if you installed nginx-naxsi
 	##
 
-	# include /etc/nginx/naxsi_core.rules;
+	#include /etc/nginx/naxsi_core.rules;
 
 	##
-	# Phusion Passenger config
+	# nginx-passenger config
 	##
-	# Uncomment it if you installed passenger or passenger-enterprise
+	# Uncomment it if you installed nginx-passenger
 	##
 	
-	 passenger_root /usr/lib/ruby/vendor_ruby/phusion_passenger/locations.ini;
-	 passenger_ruby /usr/bin/ruby;
+	#passenger_root /usr;
+	#passenger_ruby /usr/bin/ruby;
 
 	##
 	# Virtual Host Configs
@@ -73,7 +73,7 @@ http {
 }
 
 
-# mail {
+#mail {
 #	# See sample authentication script at:
 #	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
 # 
@@ -92,4 +92,4 @@ http {
 #		protocol   imap;
 #		proxy      on;
 #	}
-# }
+#}
